second commit adding search and dispaly function

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-      <header id="nav">
+      <!-- <header id="nav">
             <div class="logo">
 
                   <a href=""><img src="assets/imdb.png" alt=""></a>
@@ -71,7 +71,19 @@
             <button type="submit" class="text-icon-btn fav-btn" ><img src="assets/favourites-folder.png" alt=""> <span>Favrouite Movies</span> </button>
 
             </div>
-      </main>
+      </main> -->
+
+
+
+
+      <div id="search-bar">
+            <form id="search-form" action="">
+                  <input type="text" id="text-input" placeholder="Search IMDB">
+            </form>
+      </div>
+
+      <div id="movies-grid"></div>
+
 
       <script src="script.js"></script>
       
