added fav body onload func to load content of fav movie list

--- a/home.html
+++ b/home.html
@@ -29,14 +29,14 @@
             </div>
         </div>
         <div class="fav-button">
-          <button class="button" id="fav-button" onclick="favrouitMoviePage()">Favorite</button>
+          <button class="button" id="fav-button" ><a href="Favorite.html">Favorite</a></button>
         </div>
       </div>
     </nav>
 
     <main>
       <div id="cards-container" class="cards-container container d-flex">
-            
+            <!-- MOvies will append here in a card div -->
       </div>
     </main>
 
