--- a/Favorite.html
+++ b/Favorite.html
@@ -3,16 +3,22 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="favorite.css">
+      <link rel="stylesheet" href="HomePage.css">
       <script src="HomePage.js " defer></script>
       <title>Favorite Movies</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@6.4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
-<body>
+<body onload="favrouietMoviePage()">
       <div class="header">
             <div class="banner">
                   <h1>Favorite Movies</h1>
+                  <h2 ><a href="home.html"> Go Back to Home</a></h2>
             </div>
       </div>
-      <div id="fav-movie-container"></div>
+
+     <div class="main">
+      <div id="fav-container" class="fav-container d-flex"></div>
+     </div>
 </body>
 </html>
