--- a/movie.html
+++ b/movie.html
@@ -5,7 +5,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Movie Page</title>
 </head>
-<body>
-      <div id="movie-page"></div>
+<body onload="singleMovie()">
+      <div id="movie-page-header">
+            <h1>Movie Details</h1>
+
+      </div>
+      <div class="movie-content">
+
+      </div>
+
+      <script src="HomePage.js"></script>
 </body>
 </html>
