added single movie info page

--- a/movie.html
+++ b/movie.html
@@ -8,6 +8,7 @@
 <body onload="singleMovie()">
       <div id="movie-page-header">
             <h1>Movie Details</h1>
+            <h2><a href="home.html">Go back To Home</a></h2>
 
       </div>
       <div class="movie-content">
