--- a/Favorite.html
+++ b/Favorite.html
@@ -3,22 +3,28 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="HomePage.css">
+      <link rel="stylesheet" href="favorite.css">
       <script src="HomePage.js " defer></script>
       <title>Favorite Movies</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@6.4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+      <!-- Bootstrap link -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+       <!-- font-awesome link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
 </head>
 <body onload="favrouietMoviePage()">
       <div class="header">
             <div class="banner">
-                  <h1>Favorite Movies</h1>
-                  <h2 ><a href="home.html"> Go Back to Home</a></h2>
+                  <h1 class="h1">Favorite Movies</h1>
+                  <button class="btn btn-dark"><a href="home.html"> Go Back to Home</a></button>
             </div>
       </div>
 
      <div class="main">
-      <div id="fav-container" class="fav-container d-flex"></div>
+      <div id="fav-container" class="fav-container"></div>
      </div>
 </body>
 </html>
