--- a/home.html
+++ b/home.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="HomePage.css">
+    <title>Cinema flix</title>
     <!-- font-awesome link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
    
-    <title>Cinema flix</title>
+   
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
-    <nav>
-      <div class="nav-bar d-flex container">
-        <div class="logo-img">
+
+    <!-- Main Header  -->
+    <nav id="nav" class="navbar ">
+      <div class=" d-flex container collapse " id="navbarToggleExternalContent" >
+        <div class="logo-img navbar-brand" onclick="window.location.reload()">
           <img src="assets/imdb.png" alt="" />
         </div>
         <div class="search-bar-container">
@@ -29,12 +32,14 @@
             </div>
         </div>
         <div class="fav-button">
-          <button class="button" id="fav-button" ><a href="Favorite.html">Favorite</a></button>
+          <button class="button" id="fav-button"  ><a href="Favorite.html">Favorite Movies</a></button>
         </div>
+        
       </div>
+      
     </nav>
 
-    <main>
+    <main id="main">
       <div id="cards-container"  class="cards-container container d-flex">
             <!-- MOvies will append here in a card div -->
       </div>
