removing unwanted items

--- a/Favorite.html
+++ b/Favorite.html
@@ -24,7 +24,9 @@
       </div>
 
      <div class="main">
-      <div id="fav-container" class="fav-container"></div>
+      <div id="fav-container" class="fav-container">
+            <!-- favorite Movie List will go here -->
+      </div>
      </div>
 </body>
 </html>
