--- a/movie.html
+++ b/movie.html
@@ -9,15 +9,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+<!-- bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <title>Movie Page</title>
   </head>
-  <body onload="singleMovie()">
+  <body onload="singleMovie()" class="movie-body">
     <!-- header -->
-    <div id="movie-page-header">
-      <h1>Movie Details</h1>
-      <h2><a href="home.html">Go back To Home</a></h2>
-    </div>
+    <div id="movie-page-header" class="header">
+          
+          <div  class="banner">
+                <h1 class="h1">Movie Details</h1>
+                <button class="btn btn-dark"><a href="home.html">Go back To Home</a></button>
+            </div>
+      </div>
 
     <!-- display of movie details  -->
     <div class="movie-container">
