changing home to index

--- a/Favorite.html
+++ b/Favorite.html
@@ -19,7 +19,7 @@
       <div class="header">
             <div class="banner">
                   <h1 class="h1">Favorite Movies</h1>
-                  <button class="btn btn-dark"><a href="home.html"> Go Back to Home</a></button>
+                  <button class="btn btn-dark"><a href="index.html"> Go Back to Home</a></button>
             </div>
       </div>
 
