--- a/movie.html
+++ b/movie.html
@@ -20,7 +20,7 @@
           
           <div  class="banner">
                 <h1 class="h1">Movie Details</h1>
-                <button class="btn btn-dark"><a href="home.html">Go back To Home</a></button>
+                <button class="btn btn-dark"><a href="index.html">Go back To Home</a></button>
             </div>
       </div>
 
